some button styles

--- a/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.css
+++ b/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.css
@@ -4,6 +4,8 @@
   overflow: hidden;
   transition: all 1s ease;
   padding: 0px;
+  border: 10px solid #212529;
+  box-sizing: border-box;
 }
 .Container ul {
   width: 100%;
@@ -11,22 +13,28 @@
   transition: all 0.5s ease;
   position: absolute;
   bottom: 0px;
+  z-index: 1;
 }
 .Container ul li {
   list-style-type: circle;
 }
-
-.button {
+.Container .button {
+  position: relative;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: transparent;
+  background-color: #212529;
   border: none;
+  z-index: 5;
+  cursor: pointer;
 }
-.button span {
+.Container .button:active {
+  color: burlywood;
+}
+.Container .button span {
   font-family: sans-serif;
   font-size: 13px;
-  margin-left: 3px;
+  margin-left: 5px;
 }/*# sourceMappingURL=PrimarySelectingSide.module.css.map */
