--- a/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
+++ b/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
@@ -4,30 +4,43 @@
   overflow: hidden;
   transition: all 1s ease;
   padding: 0px;
+  border: 10px solid #212529;
+  box-sizing: border-box;
   ul {
     width: 100%;
     color: white;
     transition: all 0.5s ease;
     position: absolute;
     bottom: 0px;
+    z-index: 1;
+
     li {
       list-style-type: circle;
     }
   }
-}
 
-.button {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-  background-color: transparent;
-  border: none;
+  .button {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    background-color: #212529;
+    border: none;
+    z-index: 5;
+    cursor: pointer;
 
-  span {
-    font-family: sans-serif;
-    font-size: 13px;
-    margin-left: 3px;
+   
+
+    &:active {
+      color: burlywood;
+    }
+
+    span {
+      font-family: sans-serif;
+      font-size: 13px;
+      margin-left: 5px;
+    }
   }
 }
