--- a/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
+++ b/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
@@ -31,10 +31,8 @@
     z-index: 5;
     cursor: pointer;
 
-   
-
-    &:active {
-      color: burlywood;
+    &:hover {
+      color: burlywood !important;
     }
 
     span {
