--- a/my-app/styles/navbar/navbar.module.scss
+++ b/my-app/styles/navbar/navbar.module.scss
@@ -1,11 +1,10 @@
 .navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   position: fixed;
   top: 0px;
-  background-color: blue;
-  height: 100px;
+  height: 70px;
   width: 100vw;
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: blue;
 }
