--- a/my-app/styles/navbar/navbar.module.scss
+++ b/my-app/styles/navbar/navbar.module.scss
@@ -7,4 +7,14 @@
   justify-content: space-between;
   align-items: center;
   background-color: blue;
+
+  .img {
+    border-radius: 50px;
+  }
+
+  div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 }
