--- a/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
+++ b/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
@@ -1,6 +1,15 @@
 .first_line {
   color: white;
-  margin-left: 10px;
+  margin-left: 14px;
+  margin-bottom: 5px;
+  margin-top: 15px;
+
+  span {
+    margin-left: 7px;
+  }
+  &:hover {
+    color: burlywood;
+  }
 }
 
 .Container {
