--- a/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
+++ b/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
@@ -6,6 +6,8 @@
 
   span {
     margin-left: 7px;
+    cursor: pointer;
+
   }
   &:hover {
     color: burlywood;
@@ -33,6 +35,7 @@
 
     li {
       list-style-type: circle;
+      cursor: pointer;
       &:hover {
         color: burlywood;
       }
