--- a/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
+++ b/my-app/styles/primarySelectingSide/PrimarySelectingSide.module.scss
@@ -1,3 +1,12 @@
+.primarySelecting {
+  position: fixed;
+  top: 70px;
+  left: 0px;
+  width: 250px;
+  height: calc(100vh - 70px);
+  background-color: #212529;
+}
+
 .first_line {
   color: white;
   margin-left: 14px;
@@ -7,7 +16,6 @@
   span {
     margin-left: 7px;
     cursor: pointer;
-
   }
   &:hover {
     color: burlywood;
@@ -22,7 +30,6 @@
   padding: 0px;
   border-left: 10px solid #212529;
   border-right: 10px solid #212529;
-
   box-sizing: border-box;
 
   ul {
