--- a/my-app/styles/groups/groupsThemes.module.scss
+++ b/my-app/styles/groups/groupsThemes.module.scss
@@ -2,7 +2,7 @@
   margin-top: 30px;
   position: relative;
   top: 70px;
-  left: 270px;
+  left: 260px;
   width: 800px;
   padding: 20px;
 }
@@ -10,4 +10,5 @@
 .groups2 {
   width: calc(100vw - 290px);
   right: 10px;
+  top: 50px;
 }
